syntax = "proto3";

option csharp_namespace = "AuctionGrpcService.Protos";

package auctioncli;


service AuctionCli {
// Creates a new auction for the owner
  rpc AuctionNew (AuctionNewRequestC) returns (AuctionBasicReplyC);

  // Add a new auction for oher users
  rpc AuctionAdd (AuctionAddRequestC) returns (AuctionBasicReplyC);

  // get the list of auction and winners
  rpc AuctionGet (AuctionRequestC) returns (AuctionGetReplyC);

  // Creates a new bid
  rpc AuctionBidNew (AuctionBidRequestC) returns (AuctionBasicReplyC);

  // Add a new bid for oher users
  rpc AuctionBidAdd (AuctionBidUsersRequestC) returns (AuctionBasicReplyC);
}

message AuctionBasicReplyC {
  string message = 1;
}

// The request message containing the new auction.
message AuctionNewRequestC {
  string auctionpicid = 1;
  string auctionprice = 2;
}


  // The request message containing the add auction
message AuctionAddRequestC {
  string auctionid = 1;
  string auctionpicid = 2;
  string auctionprice = 3;
  string clientid = 4;
}

 // The request message containing the add bid
message AuctionBidRequestC {
  string auctionid = 1;
  string bidprice = 2;
}

 // The request message containing the add bid from users
message AuctionBidUsersRequestC {
  string auctionid = 1;
  string bidprice = 2;
  string clientid = 3;
}

// The response message of the result


message AuctionRequestC {

}

// The response of auction and winners
message AuctionGetReplyC {
  repeated string data = 1;
}

